@@ -1,3 +1,10 @@
+2004-12-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/tkUnixButton.c (TkpDisplayButton): constrain coords to
+	Tk_RedrawImage to display only portion that is valid.
+	* generic/tkImgPhoto.c (ImgPhotoDisplay): add X error suppression
+	around XGetImage to prevent app abort. [Bug 979239]
+
 2004-11-24  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* README:       Bumped patchlevel to 8.4.9
